# lc3-vm

./: Cargo.toml  README.md
lc3/: Cargo.toml
lc3/src/: condcodes.rs  decode.rs  image.rs  io.rs  lc3.rs  lib.rs  memory.rs  opcode.rs  registers.rs  termios.rs  trapcode.rs
src/: main.rs
