[package]
name = "lc3"
version = "0.1.0"
authors = ["Fares A. Bakhit <fares@duck.com>"]
edition = "2021"
homepage = "https://github.com/faresbakhit/lc3-vm"
repository = "https://github.com/faresbakhit/lc3-vm"

[dependencies]
libc = { version = "0.2", features = ["extra_traits"], optional = true }

[features]
std = []
termios = ["std", "dep:libc"]
